--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.glass</groupId>
+    <groupId>glass</groupId>
     <artifactId>glass</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <name>glass</name>
@@ -44,15 +44,15 @@
     </repositories>
 
     <pluginRepositories>
-       <pluginRepository>
-         <id>bees-plugins-snapshots</id>
-         <url>http://repository-cloudbees.forge.cloudbees.com/public-snapshot/</url>
-         <releases>
-           <enabled>false</enabled>
-         </releases>
-         <snapshots>
-           <enabled>true</enabled>
-         </snapshots>
+        <pluginRepository>
+            <id>bees-plugins-snapshots</id>
+            <url>http://repository-cloudbees.forge.cloudbees.com/public-snapshot/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </pluginRepository>
     </pluginRepositories>
 
@@ -108,9 +108,9 @@
             </plugin>
 
             <plugin>
-               <groupId>com.cloudbees</groupId>
-               <artifactId>bees-maven-plugin</artifactId>
-               <version>1.0-SNAPSHOT</version>
+                <groupId>com.cloudbees</groupId>
+                <artifactId>bees-maven-plugin</artifactId>
+                <version>1.0-SNAPSHOT</version>
             </plugin>
         </plugins>
     </build>
@@ -333,6 +333,18 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
             <scope>compile</scope>
+        </dependency>
+
+        <!-- velocity -->
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-tools</artifactId>
+            <version>2.0</version>
         </dependency>
 
         <!-- joda time -->
