--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,22 @@
         </pluginRepository>
     </pluginRepositories>
 
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <configuration>
+                    <targetJdk>1.6</targetJdk>
+                    <includeTests>true</includeTests>
+                    <rulesets>
+                        <ruleset>/pmd-ruleset.xml</ruleset>
+				    </rulesets>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
+
     <properties>
         <spring.version>3.1.0.M2</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
