--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,14 @@
                     <includeTests>true</includeTests>
                     <rulesets>
                         <ruleset>/pmd-ruleset.xml</ruleset>
-				    </rulesets>
+                    </rulesets>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>2.3.2</version>
             </plugin>
         </plugins>
     </reporting>
