--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -58,6 +58,10 @@
 
     <!-- Error pages handling -->
     <error-page>
+        <error-code>400</error-code>
+        <location>/400.txt</location>
+    </error-page>
+    <error-page>
         <error-code>404</error-code>
         <location>/404.txt</location>
     </error-page>
