--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.glass</groupId>
+    <groupId>com.github.dbourdette.glass</groupId>
     <artifactId>glass</artifactId>
-    <version>0.1.0-beta4</version>
+    <version>0.1.0-SNAPSHOT</version>
     <name>glass</name>
     <description>A web user interface for quartz</description>
     <packaging>${profile.packaging}</packaging>
