--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+		<filtering>true</filtering>
             </resource>
             <resource>
                 <directory>src/main/java</directory>
@@ -195,7 +196,27 @@
                     <createChecksum>true</createChecksum>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.keyboardsamurais.maven</groupId>
+                <artifactId>maven-timestamp-plugin</artifactId>
+                <version>1.0</version>
+                <inherited>true</inherited>
+                <configuration>
+                    <propertyName>project.timestamp</propertyName>
+                    <timestampPattern>yyyy-MM-dd_HH:mm.ss</timestampPattern>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>timestamp</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
+
     </build>
 
 
@@ -420,6 +441,5 @@
             <version>2.0.2</version>
             <scope>compile</scope>
         </dependency>
-
     </dependencies>
 </project>
