add JREBEL error file in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+# --- Eclipse Files
 .project
 .classpath
 .settings
+# --- Maven
 target
+# --- IntelliJ IDEA
 bin
 *.iml
 *.log
+# --- JREBEL
+*.error
