--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,12 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.dbourdette.glass</groupId>
     <artifactId>glass</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0.b1</version>
     <name>glass</name>
     <description>A web user interface for quartz</description>
     <packaging>${profile.packaging}</packaging>
