--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
     </reporting>
 
     <properties>
-        <spring.version>3.1.0.M2</spring.version>
+        <spring.version>3.1.0.RC1</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
